Added train_test split functionality and modified training file for MLFlow

--- a/config.ini
+++ b/config.ini
@@ -1,10 +1,10 @@
 [DEFAULT]
 ; working directory, one working directory can only have one running job at a time
-output_dir=./experiments_our_model/29
+output_dir=./experiments/1
 
 ; all images should be placed under this dir
-image_source_dir=./data/images/
-mask_image_source_dir=./data/images/
+image_source_dir=./data/vindr-cxr/images
+mask_image_source_dir=./data/vindr-cxr/images
 
 ; base model name
 ; one of: VGG16, VGG19, DenseNet121, ResNet50, InceptionV3, InceptionResNetV2,
@@ -13,9 +13,7 @@ base_model_name=DenseNet121
 
 ; class names, you should not modify this
 ; class_names=Atelectasis,Cardiomegaly,Effusion,Infiltration,Mass,Nodule,Pneumonia,Pneumothorax,Consolidation,Edema,Emphysema,Fibrosis,Pleural_Thickening,Hernia
-class_names=infiltration,nodule,consolidation,fibrosis,pleural_thickening
-;class_names=Infiltration,Nodule,Consolidation,Fibrosis,Pleural_Thickening
-;class_names=Atelectasis,Cardiomegaly,Effusion,Infiltrate,Mass,Nodule,Pneumonia,Pneumothorax
+class_names=Consolidation,Nodule/Mass,Pleural thickening,Infiltration,Pulmonary fibrosis
 
 [TRAIN]
 ; use base model weights or not. If true, imagenet pretrained weights will be used.
@@ -67,7 +65,7 @@ min_lr=1e-8
 positive_weights_multiply=1
 
 ; path of the folder that contains train.csv|dev.csv|test.csv
-dataset_csv_dir=./data/default_split
+dataset_csv_dir=./data/vindr-cxr/annotations
 
 ; print model summary
 show_model_summary=true
