Modified code for running inference on CheXNet using VinDr-CXR

--- a/config.ini
+++ b/config.ini
@@ -1,6 +1,6 @@
 [DEFAULT]
 ; working directory, one working directory can only have one running job at a time
-output_dir=./experiments/1
+output_dir=./experiments/
 
 ; all images should be placed under this dir
 image_source_dir=./data/vindr-cxr/images
@@ -75,10 +75,12 @@ batch_size=8
 test_steps=auto
 test_generator_random_state=1
 ; if true, use best_weights.h5, else use weights.h5
-use_best_weights=true
+use_original_weights=true
+use_best_weights=false
 
 [CAM]
 ;bbox_list_file=./data/BBOX.csv
 bbox_list_file=./data/BBOX_test.csv
 ;bbox_list_file=./data/BBox_List_2017.csv
-use_best_weights=true
+use_original_weights=true
+use_best_weights=false
