Added functionality for gradcam execution

--- a/config.ini
+++ b/config.ini
@@ -3,6 +3,7 @@
 output_dir=./experiments/
 
 ; all images should be placed under this dir
+
 image_source_dir=./data/vindr-cxr/images
 mask_image_source_dir=./data/vindr-cxr/images
 
@@ -78,7 +79,5 @@ test_generator_random_state=1
 use_best_weights=true
 
 [CAM]
-;bbox_list_file=./data/BBOX.csv
-bbox_list_file=./data/BBOX_test.csv
-;bbox_list_file=./data/BBox_List_2017.csv
+bbox_list_file=./data/vindr-cxr/annotations/annotations_test_5.csv
 use_best_weights=true
