--- a/config.ini
+++ b/config.ini
@@ -13,7 +13,7 @@ base_model_name=DenseNet121
 
 ; class names, you should not modify this
 ; class_names=Atelectasis,Cardiomegaly,Effusion,Infiltration,Mass,Nodule,Pneumonia,Pneumothorax,Consolidation,Edema,Emphysema,Fibrosis,Pleural_Thickening,Hernia
-class_names=Consolidation,Nodule/Mass,Pleural thickening,Infiltration,Pulmonary fibrosis
+class_names=Consolidation,Nodule-Mass,Pleural thickening,Infiltration,Pulmonary fibrosis
 
 [TRAIN]
 ; use base model weights or not. If true, imagenet pretrained weights will be used.
@@ -79,8 +79,7 @@ use_original_weights=true
 use_best_weights=false
 
 [CAM]
-;bbox_list_file=./data/BBOX.csv
-bbox_list_file=./data/BBOX_test.csv
+bbox_list_file=./data/vindr-cxr/annotations/annotations_test_5.csv
 ;bbox_list_file=./data/BBox_List_2017.csv
 use_original_weights=true
 use_best_weights=false
