Modified calculation of IoU, showed all bboxes for each class in gradcam

--- a/config.ini
+++ b/config.ini
@@ -14,7 +14,7 @@ base_model_name=DenseNet121
 
 ; class names, you should not modify this
 ; class_names=Atelectasis,Cardiomegaly,Effusion,Infiltration,Mass,Nodule,Pneumonia,Pneumothorax,Consolidation,Edema,Emphysema,Fibrosis,Pleural_Thickening,Hernia
-class_names=Consolidation,Nodule/Mass,Pleural thickening,Infiltration,Pulmonary fibrosis
+class_names=Consolidation,Nodule-Mass,Pleural thickening,Infiltration,Pulmonary fibrosis
 
 [TRAIN]
 ; use base model weights or not. If true, imagenet pretrained weights will be used.
