--- a/config.ini
+++ b/config.ini
@@ -33,10 +33,10 @@ output_weights_name=weights.h5
 
 ; basic training parameters
 epochs=40
-batch_size=8
+batch_size=6
 
 ; learning rate options
-initial_learning_rate=0.001
+initial_learning_rate=0.003
 
 ; worker number of the image generators
 generator_workers=8
@@ -56,7 +56,8 @@ validation_steps=auto
 
 ; patience parameter used for ReduceLROnPlateau callback
 ; If val_loss doesn't decrease for x epochs, learning rate will be reduced by factor of 10.
-patience_reduce_lr=3
+patience_reduce_lr=2
+patience_early_stopping=20
 
 ; minimun learning rate
 min_lr=1e-8
